# kinetiq-app

./: .env.example  .gitignore  CLAUDE.md  README.md  railway.ingestion-worker.toml  railway.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  data-freshness.yml  monthly-campaign.yml  monthly-signal-dump.yml  run-gated-campaign.yml  run-validation.yml
apps/platform-core/agent-registry/: README.md
apps/platform-core/agent-sdk/: README.md
apps/platform-core/api-gateway/: README.md  billing.py  deps.py  main.py  pyproject.toml  railway.toml  requirements.txt
apps/platform-core/api-gateway/src/kinetiq_api_gateway/: main.py
apps/platform-core/api-gateway/tests/: conftest.py  test_main.py
apps/platform-core/billing/: README.md
apps/platform-core/guardrails/: README.md
docs/: ai-coding-workflow.md  daily-loss-limit-exposure-cap-brief.md  deployment-runbook.md  fable5-crypto-theory-investigation-2026-07.md  fib-gann-validation-brief.md  kanban.md  llm-telegram-guardrails-brief.md  margin-mode-brief.md  post-research-vertical-slices.md  prd.md  regime-gate-knn-risk-memory-brief.md  shadow-simulator-brief.md  sonnet5-implementation-roadmap.md  validation-deep-dive-2026-07.md  vultr-vm-migration-brief.md
docs/validation-results/: campaign.json  gated_campaign.json  gated_campaign_knn_sweep.json  replication-2026-07-03.json
infra/neon/: README.md
infra/railway/: README.md
scripts/: manual-deploy-coolify.sh  manual-deploy-railway.sh  manual-migrate-neon.sh
tools/: README.md  coolify_logs.py  manual-test-console.html  railway_logs.py
(+98 files in other folders)
