[project]
name = "kinetiq-api-gateway"
version = "0.1.0"
description = "FastAPI gateway: tenant auth middleware, product+tier plan-gating, request routing (Section B.1/B.2)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
